[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/sword_attack.gd" type="Script" id=1]
[ext_resource path="res://asset/Socapex - Swordsmall.wav" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array(  ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 0, 0, 0 ), PoolVector2Array( 0, 0, 31, 31 ), PoolVector2Array( 31, 31, 31, 31 ) ]
}

[node name="Line2D" type="Line2D"]
z_index = 10
width = 3.0
default_color = Color( 0.301961, 0.721569, 1, 1 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Slash = SubResource( 2 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="sfx" to="." method="_on_sfx_finished"]
